# rag-system

./: .dockerignore  .env.example  .gitignore  CODEBASE.txt  Dockerfile  PROJECT_OVERVIEW.md  README.md  STARTUP.txt  USER_GUIDE.md  check.py  docker-compose.yml  paper.json  problems.txt  pyproject.toml  requirements.txt  start.sh
api/: main.py
frontend/: index.html
frontend/src/: App.jsx
ingestion/: pipeline.py
qdrant_data/: raft_state.json
qdrant_data/collections/qdrant_data/: raft_state.json
qdrant_data/collections/rag_documents/: config.json
qdrant_data/collections/rag_documents/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/rag_documents/0/segments/2b5ba2bc-faee-4678-a85e-746d01482cc7/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/rag_documents/0/segments/3d369497-3064-44a1-8cda-150521a63089/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_data/collections/rag_documents/0/segments/3d369497-3064-44a1-8cda-150521a63089/vector_index/: hnsw_config.json
retrieval/: search.py
utils/: cache.py  docx_generator.py  embeddings.py  evaluator.py  pdf_generator.py  qdrant_setup.py  reranker.py  vlm_manager.py
